--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "sass": "^1.60.0",
     "stripe": "^12.0.0",
     "styled-components": "^5.3.9",
+    "typed-redux-saga": "^1.5.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -58,6 +59,7 @@
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "babel-plugin-macros": "^3.1.0"
   }
 }
